force-app/main/default/objects/Department__c/Department__c.object-meta.xml
<CustomObject>
    <description>Object to store department details.</description>
    <label>Department</label>
    <nameField>
        <displayFormat>DEP-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>