force-app/main/default/objects/Department__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <description>Field to store department&apos;s name.</description>
    <inlineHelpText>Field to store department&apos;s name.</inlineHelpText>
    <label>Department Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>