force-app/main/default/objects/Department__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Field to store department&apos;s manager.</description>
    <inlineHelpText>Field to store department&apos;s manager.</inlineHelpText>
    <label>Manager</label>
    <referenceTo>Manager__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>